--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-torch~=1.8.1
-torchvision~=0.10.0
+pytorch
+torchvision
 torchaudio
 tensorboard
-numpy~=1.19.5
-matplotlib~=3.4.2
+numpy
+matplotlib
