--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 pytorch
-torchvision~=0.11.1
-torchaudio
-tensorboard
-numpy~=1.21.0
-matplotlib~=3.4.2
-torchviz~=0.0.2
+tensorboard>=2.8.0
+tensorflow>=2.7.0
+torchviz>=0.0.2
+dataclasses>=0.6
+numpy>=1.21.0
+matplotlib>=3.4.2
 tabulate
-dataclasses~=0.8
-pillow~=8.4.0
+pillow>=8.4.0
 graphviz~=2.38
-tensorflow~=2.7.0
+python-graphviz
+torchvision~=0.11.3
+scipy~=1.8.0
+seaborn~=0.11.2
