--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,16 @@ tensorboard>=2.8.0
 tensorflow>=2.7.0
 torchviz>=0.0.2
 dataclasses>=0.6
-numpy
+numpy~=1.21.5
 matplotlib>=3.4.2
 tabulate
 pillow>=8.4.0
 graphviz~=2.38
 python-graphviz
-scipy
+scipy~=1.8.0
 seaborn~=0.11.2
+natsort~=7.1.1
 
-conda install python-graphviz graphviz numpy matplotlib tabulate pillow scipy seaborn
-pip install tensorflow tensorboard torchviz
+# conda install python-graphviz graphviz numpy matplotlib tabulate pillow scipy seaborn natsort
+# pip install tensorflow tensorboard torchviz dataclasses
+
