graph model simplification

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-# pytorch
-# torchvision
-# tensorboard
-# tensorflow
-# torchviz
+#
+--extra-index-url https://download.pytorch.org/whl/cu116
+torch
+torchvision~=0.14.0
+torchaudio
+numpy
+scipy
+networkx
+
 # dataclasses
 # numpy
 # matplotlib
@@ -15,4 +19,3 @@
 # natsort
 # conda install python-graphviz graphviz numpy matplotlib tabulate pillow scipy seaborn natsort
 # pip install tensorflow tensorboard torchviz dataclasses
-
