restructure for pip
Signed-off-by: Vivswan Shah <58091053+Vivswan@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -186,9 +186,9 @@ cython_debug/
 # .idea/artifacts
 # .idea/compiler.xml
 # .idea/jarRepositories.xml
-# .idea/modules.xml
+# .idea/module.xml
 # .idea/*.iml
-# .idea/modules
+# .idea/module
 # *.iml
 # *.ipr
 
