--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,12 @@ graphviz
 # python-graphviz
 seaborn
 natsort
+
+# Docs
+sphinx>=4.2.0
+sphinx-autobuild
+rst-to-myst[sphinx]
+myst_parser
+furo
+sphinx-rtd-theme
+sphinx-autoapi
