--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,16 +9,14 @@ version: 2
 build:
   os: ubuntu-20.04
   tools:
-    python: "3.7"
+    python: 3.11
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   configuration: docs/source/conf.py
 
 # If using Sphinx, optionally build your docs in additional formats such as PDF
-formats:
-  - epub
-  - pdf
+formats: all
 # Optionally declare the Python requirements required to build your docs
 python:
    install:
