--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,7 +95,7 @@ doc = [
     "rst-to-myst[sphinx]",
     "myst_parser",
     "furo",
-    "sphinx-rtd-theme",
+#    "sphinx-rtd-theme",
     "sphinx-autoapi",
     "sphinx-copybutton",
     "sphinx-notfound-page",
