--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,8 @@
 
 [build-system]
 requires = ["wheel", "setuptools>=61.0.0", "flit_core >=3.2,<4"]
-build-backend = "flit_core.buildapi"
+build-backend = "setuptools.build_meta"
+#build-backend = "flit_core.buildapi"
 
 [tool.flit.module]
 name = "analogvnn"
@@ -98,7 +99,7 @@ doc = [
 #    "sphinx-rtd-theme",
     "sphinx-autoapi",
     "sphinx-copybutton",
-    "sphinx-notfound-page",
+    #    "sphinx-notfound-page",
 ]
 all = ["analogvnn[research,dev,doc]"]
 
