--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ description = "A fully modular framework for modeling and optimizing analog/phot
 readme = "README.md"
 requires-python = ">=3.7"
 license = { file = "LICENSE" }
+documentation = "https://analogvnn.readthedocs.io/en/latest/"
+repository = "https://github.com/Vivswan/AnalogVNN"
 keywords = ["deep-learning", "analog", "photonics", "neural-network", "framework", "pytorch"]
 authors = [
     { name = "Vivswan Shah", email = "vivswanshah@pitt.edu" }
@@ -103,7 +105,6 @@ doc = [
     "sphinx-copybutton",
 ]
 all = ["analogvnn[research,dev,doc]"]
-
 [project.urls]
 "Homepage" = "https://github.com/Vivswan/AnalogVNN"
 "Bug Reports" = "https://github.com/Vivswan/AnalogVNN/issues"
