bug fix and improved TensorboardModelLog
Signed-off-by: Vivswan Shah <58091053+Vivswan@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,7 @@ research = [
     "tensorflow",
     "tensorboard",
     "torchviz",
+    "torchinfo",
     "matplotlib",
     "tabulate",
     "pillow",
