--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ networkx
 importlib_metadata
 
 # Development
-setuptools==65.6.3
+setuptools>=61.0.0
 build # building the package {pyproject-build}
 twine # to publish on pypi {twine upload --repository-url=https://test.pypi.org/legacy/ dist/*} {twine upload dist/*}
 johnnydep # to see dependencies {johnnydep <package>}
@@ -17,6 +17,7 @@ johnnydep # to see dependencies {johnnydep <package>}
 tensorflow
 tensorboard
 torchviz
+torchinfo
 matplotlib
 tabulate
 pillow
@@ -25,7 +26,6 @@ graphviz
 # python-graphviz
 seaborn
 natsort
-torchinfo
 
 # Docs
 sphinx>=4.2.0
