flake8 and minor corrections
Signed-off-by: Vivswan Shah <58091053+Vivswan@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,7 +102,7 @@ flake8 = [
     "flake8-executable",
     "flake8-coding",
     "flake8-return",
-    "flake8-noreturn",
+#    "flake8-noreturn; python_version >= '3.8'",
     "flake8-deprecated",
 ]
 dev = [
