--- a/requirements/requirements-test.txt
+++ b/requirements/requirements-test.txt
@@ -7,5 +7,5 @@ flake8-comprehensions
 flake8-executable
 flake8-coding
 flake8-return
-flake8-noreturn
+# flake8-noreturn>=1.0.1; python_version >= '3.8'
 flake8-deprecated
