added usage to README.md

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,6 @@
 
 [build-system]
 requires = ["wheel", "setuptools>=61.0.0", "flit_core >=3.2,<4"]
-#build-backend = "setuptools.build_meta"
 build-backend = "flit_core.buildapi"
 
 [tool.flit.module]
@@ -19,9 +18,9 @@ where = ["analogvnn"]
 
 [project]
 # $ pip install analogvnn
-name = "analogvnn"
-version = "1.0.5"
-description = "A fully modular framework for modeling and optimizing analog/photonic neural networks"  # Optional
+name = "AnalogVNN"
+version = "1.0.6rc9"
+description = "A fully modular framework for modeling and optimizing analog/photonic neural networks"
 readme = "README.md"
 requires-python = ">=3.7"
 license = { file = "LICENSE" }
@@ -33,23 +32,14 @@ maintainers = [
     { name = "Vivswan Shah", email = "vivswanshah@pitt.edu" }
 ]
 # For a list of valid classifiers, see https://pypi.org/classifiers/
-classifiers = [# Optional
-    # How mature is this project? Common values are
-    #   3 - Alpha
-    #   4 - Beta
-    #   5 - Production/Stable
+classifiers = [
     "Development Status :: 5 - Production/Stable",
-    # Indicate who your project is intended for
     "Intended Audience :: Developers",
     "Intended Audience :: Science/Research",
     "Topic :: Software Development :: Build Tools",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
     "Topic :: Software Development :: Libraries :: Python Modules",
-    # Pick your license as you wish
     "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
-    # Specify the Python versions you support here. In particular, ensure
-    # that you indicate you support Python 3. These classifiers are *not*
-    # checked by "pip install". See instead "python_requires" below.
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
@@ -58,12 +48,6 @@ classifiers = [# Optional
     "Programming Language :: Python :: 3 :: Only",
 ]
 
-# This field lists other packages that your project depends on to run.
-# Any package you put here will be installed by pip when your project is
-# installed, so they must be valid existing projects.
-#
-# For an analysis of this field vs pip's requirements files see:
-# https://packaging.python.org/discussions/install-requires-vs-requirements/
 dependencies = [
     "dataclasses",
     "scipy",
@@ -72,14 +56,6 @@ dependencies = [
     "importlib-metadata<5.0.0,>=2.0.0; python_version < '3.8'",
 ]
 
-# List additional groups of dependencies here (e.g. development
-# dependencies). Users will be able to install these using the "extras"
-# syntax, for example:
-#
-#   $ pip install analogvnn[dev]
-#
-# Similar to `dependencies` above, these must be valid existing
-# projects.
 [project.optional-dependencies]
 full = [
     "tensorflow",
@@ -131,8 +107,3 @@ all = ["analogvnn[full,dev,doc,test]"]
 "Homepage" = "https://github.com/Vivswan/AnalogVNN"
 "Say Thanks!" = "https://vivswan.github.io/"
 "Source" = "https://github.com/Vivswan/AnalogVNN"
-
-# The following would provide a command line executable called `sample`
-# which executes the function `main` from this package when invoked.
-#[project.scripts]  # Optional
-#sample = "sample:main"
