--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,8 @@ where = ["analogvnn"]
 
 [project]
 # $ pip install analogvnn
-name = "AnalogVNN"
-version = "1.0.6rc9"
+name = "analogvnn"
+version = "1.0.6"
 description = "A fully modular framework for modeling and optimizing analog/photonic neural networks"
 readme = "README.md"
 requires-python = ">=3.7"
