--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 # pyproject-build
 
 [build-system]
-requires = ["wheel", "setuptools>=61.0.0", "flit_core >=3.2,<4"]
+requires = ["wheel>=0.38.0", "setuptools>=61.0.0", "flit_core>=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [tool.flit.module]
